feat: Add Ecocash and Mpesa name fields to Store model and update related templates

--- a/application/templates/customer/updated_cartlist.html
+++ b/application/templates/customer/updated_cartlist.html
@@ -15,7 +15,10 @@
         </div>
         <div class="card-body">
           <p><strong>Mpesa:</strong> {{ store.mpesa_shortcode }}</p>
+          <p><strong>Mpesa Name:</strong> {{ store.mpesaname }}</p>
+          
           <p><strong>Ecocash:</strong> {{ store.ecocash_short_code }}</p>
+          <p><strong>Ecocash Name:</strong> {{ store.ecocash_name }}</p>
           <p class="text-muted small">
             Use these codes for secure payment. Location will be used to calculate delivery fee.
           </p>
