--- a/application/templates/store/updatedetails.html
+++ b/application/templates/store/updatedetails.html
@@ -10,8 +10,8 @@
         <!-- Product Name -->
         <div class="form-group">
 
-            {{form.ecocashcode.label}}
-            {{ form.ecocashcode(class="form-control") }}
+            {{form.ecocode.label}}
+            {{ form.ecocode(class="form-control") }}
             {{form.econame.label}}
              {{form.econame(class="form-control")}}
         </div>
@@ -22,7 +22,7 @@
              
             {{ form.mpesacode(class="form-control") }}
             {{form.mpesaname.label}}
-            {{form.name(class="form-control")}}
+            {{form.mpesaname(class="form-control")}}
         </div>
         <!-- Submit Button -->
         <button type="submit" class="btn btn-outline-success rounded-pill">Update</button>
