--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -98,6 +98,8 @@
     .pace .pace-activity { display: block; position: fixed; z-index: 2001; top: 50%; left: 50%; width: 45px; height: 45px; border: 4px solid #00b37e; border-top-color: transparent; border-radius: 50%; animation: pace-spinner 0.8s linear infinite; transform: translate(-50%, -50%); }
     @keyframes pace-spinner { 0% { transform: translate(-50%, -50%) rotate(0deg); } 100% { transform: translate(-50%, -50%) rotate(360deg); } }
   </style>
+
+
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -114,6 +116,17 @@
 </script>
 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W95S3CTECJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W95S3CTECJ');
+</script>
+
 <body>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MV473VBW"
