feat: Add Google AdSense account meta tag to layout.html for ad tracking

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-6135499489035494">
   <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
 <script>
     window.ezstandalone = window.ezstandalone || {};
