feat: Add Google AdSense scripts to layout.html for ad tracking

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -129,6 +129,18 @@
 </script>
 
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6135499489035494"
+     crossorigin="anonymous"></script>
+<!-- boom -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6135499489035494"
+     data-ad-slot="5765492524"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MV473VBW"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -273,6 +285,18 @@ s0.parentNode.insertBefore(s1,s0);
     {% endwith %}
     {% block content %}{% endblock %}
   </main>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6135499489035494"
+     crossorigin="anonymous"></script>
+<!-- chief -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6135499489035494"
+     data-ad-slot="8688003489"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 
 <footer class="border-top footer text-muted" style="background: #fff4e6; padding:15px;">
