--- a/application/templates/adminlayout.html
+++ b/application/templates/adminlayout.html
@@ -30,6 +30,18 @@
 </head>
 
 <body id="page-top">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6135499489035494"
+     crossorigin="anonymous"></script>
+<!-- boom -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6135499489035494"
+     data-ad-slot="5765492524"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <!-- Socket.IO (LOCAL) -->
 <script src="{{ url_for('static', filename='lib/socket.io/socket.io.min.js') }}"></script>
